        the package cache.
      - [API break] 'getSystemState': now returns persistent constant pointer.
      - Don't include unnecessary 'boost/xpressive/xpressive_fwd.hpp'.
        (Closes: #701207)
      - [ABI break] IndexEntry: new member 'options'.
      - Support for 'trusted=yes' and 'trusted=no' options in sources.list.
    - cache/package:
      - Apply id version suffixes (^<suffix>) to version strings to
        differentiate versions with same version string but different hash
        sums.
      - New methods begin() and end().
      - [API break]: 'addEntry': removed.
    - cache/relation:
      - [API break] ArchitecturedRelation, ArchitecturedRelationExpression:
        constructor from string subrange is now explicit.
      - [API break] Relation, ArchitecturedRelation: removed constructors from
        strings.
      - [API break] Use 'const char*' instead of 'string::const_iterator' in
        constructors.
    - config:
      - Don't store unused APT variables anymore.
      - New option 'cupt::console::actions-preview::show-reasons'.
      - New option 'cupt::update::generate-index-of-index'.
      - New option 'cupt::console::show-progress-messages'.
      - The option 'cupt::languages::indexes' has now default value
        'environment,en' to always download English translations regardless of
        the current locale.
      - Recognize and use the option 'dir::ignore-files-silently'.
        (Closes: #697248)
      - Removed the option 'cupt::update::keep-bad-signatures', signatures are
        always kept.
    - cache/version:
      - [API break] 'operator==': removed, versions can be now compared by
        pointers' values.
      - [API break] Source, InitializationParameters: replaced shared_ptr's
        with pointers.
      - [API break] InitializationParameters: removed.
    - system/resolver:
      - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
        removed old field 'manuallySelected'.