@@ -51,6 +51,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
         (Closes: #701207)
       - [ABI break] IndexEntry: new member 'options'.
       - Support for 'trusted=yes' and 'trusted=no' options in sources.list.
+      - [API break] 'getBinaryPackageNames', 'getSourcePackageNames': return
+        type is now 'Range<PackageNameIterator>'.
     - cache/package:
       - Apply id version suffixes (^<suffix>) to version strings to
         differentiate versions with same version string but different hash
